@@ -60,6 +60,9 @@ Avro 1.6.0 (unreleased)
     AVRO-866. Java: Add support in IDL for documentation in protocols
     and messages.  (George Fletcher via cutting)
 
+    AVRO-888. Java: Add SeekableByteArrayInput, a utility to permit
+    use of memory-based AvroDataFiles.  (Saleem Shafi via cutting)
+
   BUG FIXES
 
     AVRO-824. Java: Fix usage message of BinaryFragmentToJsonTool.
